Update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<p>Statut : <span  id="status"></span></p>
 		<p>Gloire : <span  id="glory"></span></p>
 		<p>Honneur : <span  id="honor"></span></p>
-		<p>Comp&eacute;tences (+1) : <ul id="starting-skills"></ul></p>
+		<p>Comp&eacute;tences : <ul id="starting-skills"></ul></p>
 		<p>Techniques de d&eacute;part : <ul id="starting-techniques"></ul></p>
 		<p>Equipement de d&eacute;part : <ul id="starting-outfit"></ul></p>
 		<p>Richesse : <span  id="wealth"></span></p>
