Update advantages_disadvantages.json, armor.json, and 47 more files...

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Choix de clan, famille et &#233;cole</title>
     <link id="myCss" rel="stylesheet" type="text/css" >
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/img/favicon/site.webmanifest">
 </head>
 <body>
 		
@@ -64,7 +68,7 @@
     <script id="myScript"></script>
     <script type="text/javascript">
 	   document.getElementById('myCss').setAttribute('href', 'style.css?v=' + Date.now());
-	   document.getElementById('myScript').src = '/script.js?v=' + Date.now();
+	   document.getElementById('myScript').src = 'lib.js?v=' + Date.now();
    </script>
 </script>
 </body>
