--- a/index.html
+++ b/index.html
@@ -11,59 +11,63 @@
 <body>
 		
 	<div class="left">
-		<h1>L5R - character generator</h1>
-		<h2>1 - Choix du Clan</h2>
 		<div>
-			<label for="clan">Choisissez un clan:</label>
-			<select id="clan">
-				<option value="">--Choisissez un clan--</option>
-			</select>
+			<h1>L5R - character generator</h1>
+			<h2>1 - Choix du Clan</h2>
+			<div>
+				<label for="clan">Choisissez un clan:</label>
+				<select id="clan">
+					<option value="">--Choisissez un clan--</option>
+				</select>
+			</div>
+			<div id="clan-details" class="details"></div>
+			
+			<h2>2 - Choix de la famille</h2>
+			<div>
+				<label for="famille">Choisissez une famille:</label>
+				<select id="famille">
+					<option value="">--Choisissez une famille--</option>
+				</select>
+			</div>
+			<div id="family-details" class="details"></div>
+			<div>
+				<label for="anneau">Choisissez un anneau:</label>
+				<select id="anneau">
+					<option value="">--Choisissez un anneau--</option>
+				</select>
+			</div>
+			
+			<h2>3 - Choix de l'&#233;cole</h2>
+			<div>
+				<label for="allow-other-clan">Autoriser une &#233;cole d'un autre clan:</label>
+				<input type="checkbox" id="allow-other-clan">
+			</div>
+			<div>
+				<label for="ecole">Choisissez une &#233;cole:</label>
+				<select id="ecole">
+					<option value="">--Choisissez une &#233;cole--</option>
+				</select>
+			</div>
+			<div id="school-details" class="details"></div>
 		</div>
-		<div id="clan-details"></div>
-		
-		<h2>2 - Choix de la famille</h2>
-		<div>
-			<label for="famille">Choisissez une famille:</label>
-			<select id="famille">
-				<option value="">--Choisissez une famille--</option>
-			</select>
-		</div>
-		<div id="family-details"></div>
-		<div>
-			<label for="anneau">Choisissez un anneau:</label>
-			<select id="anneau">
-				<option value="">--Choisissez un anneau--</option>
-			</select>
-		</div>
-		
-		<h2>3 - Choix de l'&#233;cole</h2>
-		<div>
-			<label for="allow-other-clan">Autoriser une &#233;cole d'un autre clan:</label>
-			<input type="checkbox" id="allow-other-clan">
-		</div>
-		<div>
-			<label for="ecole">Choisissez une &#233;cole:</label>
-			<select id="ecole">
-				<option value="">--Choisissez une &#233;cole--</option>
-			</select>
-		</div>
-		<div id="school-details"></div>
 	</div>
 	<div class="right">
-		<h1>R&#233;sum&#233;</h1>
-		<p>Clan : <span  id="chosen-clan"></span></p>
-		<p>Famille : <span  id="chosen-family"></span></p>
-		<p>&#201;cole : <span  id="chosen-school"></span></p>
-		<p>Valeurs des anneaux : <ul id="ring-values"></ul></p>
-		<p>Statut : <span  id="status"></span></p>
-		<p>Gloire : <span  id="glory"></span></p>
-		<p>Honneur : <span  id="honor"></span></p>
-		<p>Comp&eacute;tences : <ul id="starting-skills"></ul></p>
-		<p>Techniques de d&eacute;part : <ul id="starting-techniques"></ul></p>
-		<p>Equipement de d&eacute;part : <ul id="starting-outfit"></ul></p>
-		<p>Richesse : <span  id="wealth"></span></p>
-		
-		<p style="color:red">TODO : ajout des choix 4 (un anneau) + 7/8 (gloire/honneur et/ou compétences en+) .</p>
+		<div>
+			<h1>R&#233;sum&#233;</h1>
+			<p>Clan : <span  id="chosen-clan"></span></p>
+			<p>Famille : <span  id="chosen-family"></span></p>
+			<p>&#201;cole : <span  id="chosen-school"></span></p>
+			<p>Valeurs des anneaux : <ul id="ring-values"></ul></p>
+			<p>Statut : <span  id="status"></span></p>
+			<p>Gloire : <span  id="glory"></span></p>
+			<p>Honneur : <span  id="honor"></span></p>
+			<p>Comp&eacute;tences : <ul id="starting-skills"></ul></p>
+			<p>Techniques de d&eacute;part : <ul id="starting-techniques"></ul></p>
+			<p>Equipement de d&eacute;part : <ul id="starting-outfit"></ul></p>
+			<p>Richesse : <span  id="wealth"></span></p>
+			
+			<p style="color:red">TODO : ajout des choix 4 (un anneau) + 7/8 (gloire/honneur et/ou compétences en+) .</p>
+		</div>
 	</div>
     <script id="myScript"></script>
     <script type="text/javascript">
