Update README.md, index.html, and 2 more files...

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 				</select>
 			</div>
 			<div id="school-details" class="details"></div>
+			
+			<h2>4 - Choix du comportement</h2>
+			<div>
+				<label for="behavior">Choisissez un comportement:</label>
+				<select id="behavior">
+					<option value="">--Choisissez un comportement--</option>
+				</select>
+			</div>
+			<div id="behavior-details" class="details"></div>
 		</div>
 	</div>
 	<div class="right">
@@ -66,7 +75,7 @@
 			<p>Equipement de d&eacute;part : <ul id="starting-outfit"></ul></p>
 			<p>Richesse : <span  id="wealth"></span></p>
 			
-			<p style="color:red">TODO : ajout des choix 4 (un anneau) + 7/8 (gloire/honneur et/ou compétences en+) .</p>
+			<p style="color:red">TODO : 7/8 (gloire/honneur et/ou compétences en+) .</p>
 		</div>
 	</div>
     <script id="myScript"></script>
