Update index.html and lib.js

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
 				</select>
 			</div>
 			<div id="behavior-details" class="details"></div>
+			
+			<h2>..7 - Relation avec le clan ?</h2>
+			<div>
+					<label for="rel_positive"><input type="radio" name="relation" id="rel_positive" value="positive">Positive</label>
+					<label for="rel_negative"><input type="radio" name="relation" id="rel_negative" value="negative">Conflictuelle</label>
+			</div>
+			<div id="relation-details" class="details"></div>
+			
+			<h2>8 - ..et avec le bushido ?</h2>
+			<div>
+					<label for="bushido_positive"><input type="radio" name="bushido" id="bushido_positive" value="positive">Positive</label>
+					<label for="bushido_negative"><input type="radio" name="bushido" id="bushido_negative" value="negative">Conflictuelle</label>
+			</div>
+			<div id="bushido-details" class="details"></div>
 		</div>
 	</div>
 	<div class="right">
@@ -74,8 +88,6 @@
 			<p>Techniques de d&eacute;part : <ul id="starting-techniques"></ul></p>
 			<p>Equipement de d&eacute;part : <ul id="starting-outfit"></ul></p>
 			<p>Richesse : <span  id="wealth"></span></p>
-			
-			<p style="color:red">TODO : 7/8 (gloire/honneur et/ou compétences en+) .</p>
 		</div>
 	</div>
     <script id="myScript"></script>
